uus põhifail, muudetud taustakontrolli meetodi nime ja lisatud konfifail

--- a/config.ini
+++ b/config.ini
@@ -18,6 +18,11 @@
 	minBrightness = 115
 	maxBrightness = 220
 	
+[photoAge]
+	# allowed age in days
+	# int
+	allowedAge = 200
+	
 [faceCenter]
 	# coefficients of face axe limits
 	# float
@@ -34,7 +39,6 @@
 	# float	
 	faceAssymmetryConstant = 0.15
 	
-	
 [eyesHeight]
 	# height of 50–70% of the total vertical length of the photo
 	# float
@@ -45,3 +49,24 @@
 	# coefficient of mouth size and detected face rectangle height
 	# float
 	mouthOpenLimit = 0.02
+	
+[backGround]
+	# dimension coefficients - % (/100) of image dimensions
+	# float
+	upperRectangleHeight = 0.2
+	upperRectangleWidth = 0.15
+	outsideRectangleHeight = 0.4
+	outsideRectangleWidth = 0.06
+	# Felsenszwalb's parameters
+	# http://scikit-image.org/docs/dev/api/skimage.segmentation.html#skimage.segmentation.felzenszwalb
+	# int
+	scale = 300
+	# float
+	sigma = 2.2
+	#int
+	min_size = 80
+	
+[faceDimensions]
+	# float
+	faceSizeMinFactor = 3
+	faceSizeMaxFactor = 1.5
