--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,8 @@
 # config file for document photo quality checker
-# Einar Kivisalu, TTY 04.2017
+# Einar Kivisalu, TTY 04.2017 einar.kivisalu@gmail.com
 
 [dimensions]
-	# photo minimal dimensions
+	# photo minimal dimensions in pixels
 	# int
 	photoMinWidth=600
 	photoMinHeight=750
@@ -13,7 +13,7 @@
 	pixelsCount = 50
 	
 [brightness]
-	# exposure values
+	# exposure values for mean photo
 	# int
 	minBrightness = 115
 	maxBrightness = 205
@@ -25,12 +25,14 @@
 	
 [faceCenter]
 	# coefficients of face axe limits
+	# center of photo is 2.0
 	# float
 	axeMinCoeff = 1.7
 	axeMaxCoeff = 2.3
 
 [faceVerticality]
 	# face axe max tilt ratio limit
+	# initial value 0.05, bigger value means bigger tilting angle
 	# float
 	maxTiltLimit = 0.05
 
@@ -67,6 +69,7 @@
 	min_size = 80
 	
 [faceDimensions]
+	#sizeFactor = ratio between detected face width and photo width
 	# float
 	faceSizeMinFactor = 3
 	faceSizeMaxFactor = 1.5
